// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerImportStep should render with multiple import 1`] = `
<div>
  <section
    class="space-y-6"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-3310kx"
      data-testid="TransactionNetwork"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
        data-testid="TransactionDetail--desktop"
      >
        <div
          class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Cryptoasset
        </div>
        <div
          class="flex items-center font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="css-1i4b0eq"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div>
      <ul>
        <li>
          <div
            class="no-ligatures py-4 css-1s6a8s3"
            data-testid="TransactionDetail"
          >
            <div
              class="w-40 flex-1 space-y-2 whitespace-nowrap"
              data-testid="TransactionDetail--desktop"
            >
              <div
                class="flex items-center font-semibold"
              >
                <div
                  class="flex w-0 flex-1 items-center space-x-3 overflow-hidden"
                >
                  <div
                    class="shrink-0 css-8d0u1i"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                    >
                      <img
                        alt="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                        title="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                      />
                    </div>
                  </div>
                  <div
                    class="flex w-full min-w-0 flex-col justify-between"
                  >
                    <div
                      class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="css-u3jrna"
                          data-testid="TruncateEnd"
                        >
                          ARK Devnet #3
                        </span>
                      </span>
                      <span
                        class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq
                      </span>
                    </div>
                    <p
                      class="text-sm font-medium text-theme-secondary-500"
                    >
                      <span
                        class="whitespace-nowrap"
                        data-testid="Amount"
                      >
                        0 DARK
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="css-1jhy6v9"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    pencil.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </li>
        <li>
          <div
            class="no-ligatures py-4 css-1s6a8s3"
            data-testid="TransactionDetail"
          >
            <div
              class="w-40 flex-1 space-y-2 whitespace-nowrap"
              data-testid="TransactionDetail--desktop"
            >
              <div
                class="flex items-center font-semibold"
              >
                <div
                  class="flex w-0 flex-1 items-center space-x-3 overflow-hidden"
                >
                  <div
                    class="shrink-0 css-8d0u1i"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                    >
                      <img
                        alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                        title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                      />
                    </div>
                  </div>
                  <div
                    class="flex w-full min-w-0 flex-col justify-between"
                  >
                    <div
                      class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="css-u3jrna"
                          data-testid="TruncateEnd"
                        >
                          ARK Devnet #4
                        </span>
                      </span>
                      <span
                        class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                      </span>
                    </div>
                    <p
                      class="text-sm font-medium text-theme-secondary-500"
                    >
                      <span
                        class="whitespace-nowrap"
                        data-testid="Amount"
                      >
                        0 DARK
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="css-1jhy6v9"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    pencil.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`LedgerImportStep should render with single import 1`] = `
<div>
  <section
    class="space-y-6"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-3310kx"
      data-testid="TransactionNetwork"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
        data-testid="TransactionDetail--desktop"
      >
        <div
          class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Cryptoasset
        </div>
        <div
          class="flex items-center font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="css-1i4b0eq"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-3310kx"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
        data-testid="TransactionDetail--desktop"
      >
        <div
          class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Address
        </div>
        <div
          class="flex items-center font-semibold"
        >
          <div
            class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
              data-testid="Address__address"
            >
              DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
            </span>
          </div>
        </div>
      </div>
      <div
        class="shrink-0 css-8d0u1i"
        data-testid="Avatar"
      >
        <div
          class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
        >
          <img
            alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
            title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          />
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-3310kx"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
        data-testid="TransactionDetail--desktop"
      >
        <div
          class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Balance
        </div>
        <div
          class="flex items-center font-semibold"
        >
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            0 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-x92ash"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
        data-testid="TransactionDetail--desktop"
      >
        <div
          class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Wallet Name
        </div>
        <div
          class="flex items-center font-semibold"
        >
          ARK Devnet #4
        </div>
      </div>
      <button
        class="css-1jhy6v9"
        data-testid="LedgerImportStep__edit-alias"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg>
              pencil.svg
            </svg>
          </div>
        </div>
      </button>
    </div>
  </section>
</div>
`;
